[project]
name = "ma-poca-rllib"
version = "0.1.0"
description = "An implementation of MA-POCA for RLlib."
authors = [{ name = "Jules", email = "jules@example.com" }]
requires-python = ">=3.9"
dependencies = [
    "ray[rllib]>=2.9.0",
    "torch>=2.0.0",
    "mlflow>=2.12.0",
    "gymnasium>=0.29.0",
    "pettingzoo[mpe]>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
