[project]
name = "ma-poca-rllib"
version = "0.1.0"
description = "An implementation of MA-POCA for RLlib."
authors = [{ name = "Jules", email = "jules@example.com" }]
requires-python = ">=3.9"
dependencies = [
    "ray[rllib]>=2.9.0",
    "torch>=2.0.0",
    "mlflow>=2.12.0",
    "pettingzoo[mpe]>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# 同時に許可する診断の最大数
line-length = 88
# 除外するファイルやディレクトリ
extend-exclude = [
    "__pycache__",
    ".git",
    ".github",
    ".pytest_cache",
    ".ruff_cache",
    ".vscode",
]

[tool.ruff.lint]
# 有効にするルール
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "Q",   # flake8-quotes
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]
# 無視するルール
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
# テストファイルではassertを使用することを許可
"tests/**/*" = ["S101"]

[tool.ruff.format]
# Ruffのフォーマット設定
# 文字列のクォートスタイルを指定 (ダブルクォートまたはシングルクォート)
quote-style = "double"
# インデントの種類を指定 (spaceまたはtab)
indent-style = "space"
# 改行コードを指定 (auto、lf、cr-lf、またはnative)
line-ending = "auto"
# 末尾の空白行を削除するかどうか
skip-magic-trailing-comma = false
# 複数行のリストや辞書で末尾のカンマを許可するかどうか